--- a/assets/css/templatemo-hexashop.css
+++ b/assets/css/templatemo-hexashop.css
@@ -863,6 +863,19 @@ Banner SkinCare
   width: 100%;
   margin-right: 0px;
 }
+/*
+---------------------------------------------
+FaQ SkinCare
+---------------------------------------------
+*/
+#Faq-banner {
+  margin-top: 80px;
+}
+
+#Faq-banner img {
+  width: 100%;
+  margin-right: 0px;
+}
 
 /**
  * NOTIFICATION TOAST 
